# build-bom

./: .gitignore  Cargo.toml  README.org
.github/workflows/: ci.yml
data/: syscalls_x64.tsv
doc/: build_bom_seq.d2  gen.sh
src/: bom.rs  lib.rs  main.rs
src/bom/: bitcode.rs  chainsop.rs  clang_support.rs  deptree.rs  event.rs  executables.rs  extract.rs  loader.rs  mod.rs  normalize.rs  options.rs  proc_read.rs  raw.rs  syscalls.rs  trace.rs  versioning.rs
tests/: test_bom.rs  test_zlib.rs
tests/common/: mod.rs
tests/sources/blddir_test/: Makefile  hello-world.c  target.c
tests/sources/blddir_test/headers/: target.h
tests/sources/no_compile_only/: Makefile
