[package]
name = "build-bom"
version = "0.1.0"
authors = ["Tristan Ravitch <tristan@ravit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pete = "^0.3"
os_pipe = "^0.9"
anyhow = "^1"
byteorder = "^1.3"
nix = "^0.19"
structopt = "^0.3"
serde = { version = "^1", features = ["derive"] }
rmp-serde = "^0.14"
serde_json = "1.0"
thiserror = "1.0"
glob = "0.3"
slab_tree = "^0.3"
which = "^4"
tar = "0.4"
tempfile = "3.1"
sha2 = "^0.9"
hex = "0.4"
regex = "1"
lazy_static = "1"

[patch.crates-io]
pete = { git = "http://github.com/ranweiler/pete", branch = "master" }
