[package]
name = "build-bom"
version = "0.2.0"
authors = ["Tristan Ravitch <tristan@ravit.ch>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Utility to extract LLVM bitcode from a build process."

[[bin]]
name = "build-bom"
path = "src/main.rs"

[lib]
name = "bom"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
pete = "^0.7"
os_pipe = "^0.9"
anyhow = "^1"
byteorder = "^1.3"
env_logger = "0.11"
log = "0.4"
nix = "^0.22"
serde = { version = "^1", features = ["derive"] }
rmp-serde = "^0.14"
serde_json = "1.0"
thiserror = "1.0"
glob = "0.3"
slab_tree = "^0.3"
which = "^4"
tar = "0.4"
tempfile = "3.1"
sha2 = "^0.9"
hex = "0.4"
regex = "1"
lazy_static = "1"
chainsop = { git = "https://github.com/kquick/chainsop.git" }

[dev-dependencies]
xshell = "0.1"
fs_extra = "^1.2"
serial_test = "0.4"
test-log = "0.2"
